fixed cart overflowing

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import "./mixin.scss";
 .App {
+  position: relative;
   overflow-x: hidden;
   height: 100vh;
   &--container {
