--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -109,6 +109,7 @@ $h-nav: 5rem;
     &__link {
       height: fit-content;
       font-weight: bold;
+      font-size: 1.2rem;
       color: var(--dark-blue);
       &:hover {
         color: var(--dark-grayish-blue);
